Fix(css: index): wrap 되도록 display:flex 주석처리

--- a/mos/src/main/resources/static/css/index/main.css
+++ b/mos/src/main/resources/static/css/index/main.css
@@ -79,7 +79,7 @@
 
 .HomeTab_right {
   position: relative;
-  display: flex;
+  /*display: flex;*/
 }
 
 .HomeTab_right .HomeTab_selector {
